Refactor: Use isBlank() instead of isEmpty() where applicable